--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -92,7 +92,7 @@
             <label class="input-group" style="display:inline-block;">
                 <input type="file" id="csvFile" accept=".csv" style="display:none;">
                 <div style="background:var(--accent); color:white; padding:12px 24px; border-radius:12px; cursor:pointer; font-weight:600; font-size:0.9rem;">
-                    Inititalise Upload
+                    Initialise Upload
                 </div>
             </label>
         </div>
