--- a/viewsurvey.html
+++ b/viewsurvey.html
@@ -778,7 +778,7 @@
             return v;
         }
 
-       / Helper function to convert image URL to base64 using canvas (bypasses CORS)
+/        // Helper function to convert image URL to base64 using canvas (bypasses CORS)
         function imageUrlToBase64(url) {
             return new Promise((resolve, reject) => {
                 const img = new Image();
@@ -890,7 +890,6 @@
                 showAlert('Error creating photo pack: ' + e.message, 'error');
             }
         }
-
         window.downloadPhotoPack = downloadPhotoPack;
     </script>
 </body>
