--- a/viewsurvey.html
+++ b/viewsurvey.html
@@ -786,7 +786,8 @@
         function getStoragePathFromUrl(url) {
             try {
                 const urlObj = new URL(url);
-                const pathMatch = urlObj.pathname.match(/\/o\/(.+)\?/);
+                // Match /o/path where path continues until ? or end of string
+                const pathMatch = urlObj.pathname.match(/\/o\/(.+)$/);
                 if (pathMatch) {
                     return decodeURIComponent(pathMatch[1]);
                 }
