--- a/viewsurvey.html
+++ b/viewsurvey.html
@@ -782,34 +782,6 @@
             return v;
         }
 
-       // Helper function to extract Firebase Storage path from URL
-        function getStoragePathFromUrl(url) {
-            try {
-                const urlObj = new URL(url);
-                // Match /o/path where path continues until ? or end of string
-                const pathMatch = urlObj.pathname.match(/\/o\/(.+)$/);
-                if (pathMatch) {
-                    return decodeURIComponent(pathMatch[1]);
-                }
-            } catch (e) {
-                console.error('Error parsing URL:', e);
-            }
-            return null;
-        }
-
-        // Helper function to convert blob to base64
-        function blobToBase64(blob) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onloadend = () => {
-                    const base64 = reader.result.split(',')[1];
-                    resolve(base64);
-                };
-                reader.onerror = reject;
-                reader.readAsDataURL(blob);
-            });
-        }
-
         async function downloadPhotoPack() {
             if (!currentDocument) {
                 showAlert('No document loaded', 'error');
@@ -844,7 +816,6 @@
             try {
                 const zip = new JSZip();
                 const folder = zip.folder(`${jobNumber}_photos`);
-                const { ref, getBlob } = window.storageModules;
                 let successCount = 0;
 
                 // Add each photo to the ZIP
@@ -859,17 +830,15 @@
                             folder.file(filename, base64Data, { base64: true });
                             successCount++;
                         } else if (photo.startsWith('http')) {
-                            // For Firebase Storage URLs, use Firebase Storage SDK to download
-                            const storagePath = getStoragePathFromUrl(photo);
-                            if (storagePath) {
-                                const storageRef = ref(window.storage, storagePath);
-                                const blob = await getBlob(storageRef);
-                                const base64Data = await blobToBase64(blob);
-                                folder.file(filename, base64Data, { base64: true });
-                                successCount++;
-                            } else {
-                                console.error(`Could not parse storage path from URL: ${photo}`);
+                            // Fetch the image directly using the public URL
+                            const response = await fetch(photo);
+                            if (!response.ok) {
+                                console.error(`Failed to fetch photo ${i + 1}: ${response.status}`);
+                                continue;
                             }
+                            const blob = await response.blob();
+                            folder.file(filename, blob);
+                            successCount++;
                         }
                     } catch (e) {
                         console.error(`Error adding photo ${i + 1}:`, e);
