--- a/auditfailtracker.html
+++ b/auditfailtracker.html
@@ -429,6 +429,69 @@
             .fail-codes-grid {
                 grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
             }
+                    /* ===============================
+           FAIL CODE COLOUR SYSTEM
+           =============================== */
+
+        [data-code] .occurrence-code,
+        [data-code] .fail-code-name,
+        .tooltip-code {
+            font-weight: 700;
+            letter-spacing: 0.5px;
+        }
+
+        /* ========== RED ========== */
+        [data-code="E1"], [data-code="E2"], [data-code="E3"], [data-code="E4"],
+        [data-code="E5"], [data-code="E6"], [data-code="E7"], [data-code="E8"],
+        [data-code="E9"], [data-code="E10"], [data-code="E11"], [data-code="E12"],
+        [data-code="E13"], [data-code="E14"], [data-code="E15"], [data-code="E16"],
+        [data-code="E17"], [data-code="E18"], [data-code="E19"], [data-code="E20"],
+        [data-code="EX1"] {
+            --fail-colour: #ff4d4d;
+        }
+
+        /* ========== AMBER ========== */
+        [data-code="E22"], [data-code="E23"], [data-code="E24"], [data-code="E25"],
+        [data-code="E26"], [data-code="E27"], [data-code="E28"], [data-code="E29"],
+        [data-code="E30"], [data-code="E31"], [data-code="E32"], [data-code="E33"],
+        [data-code="E34"], [data-code="E35"], [data-code="E36"], [data-code="E37"],
+        [data-code="E38"], [data-code="E39"], [data-code="E40"], [data-code="E41"],
+        [data-code="E42"], [data-code="E43"], [data-code="E44"], [data-code="E45"],
+        [data-code="E46"], [data-code="E47"], [data-code="E48"], [data-code="E49"],
+        [data-code="E50"], [data-code="E51"], [data-code="EX2"] {
+            --fail-colour: #ffb020;
+        }
+
+        /* ========== PURPLE ========== */
+        [data-code="E52"], [data-code="E53"], [data-code="E54"], [data-code="E55"],
+        [data-code="E56"], [data-code="E57"], [data-code="E58"], [data-code="E59"],
+        [data-code="E60"], [data-code="E61"], [data-code="E62"], [data-code="E63"],
+        [data-code="E64"], [data-code="E65"], [data-code="E66"], [data-code="E67"],
+        [data-code="E68"], [data-code="E69"], [data-code="E70"], [data-code="EX3"] {
+            --fail-colour: #b084ff;
+        }
+
+        /* Apply colour */
+        .occurrence-row[data-code] .occurrence-code {
+            color: var(--fail-colour);
+            text-shadow: 0 0 8px color-mix(in srgb, var(--fail-colour), transparent 60%);
+        }
+
+        .fail-code-item[data-code] .fail-code-name {
+            color: var(--fail-colour);
+        }
+
+        .tooltip-code {
+            color: var(--fail-colour);
+        }
+
+        .fail-code-item[data-code] {
+            border-color: color-mix(in srgb, var(--fail-colour), transparent 60%);
+        }
+    </style>
+</head>
+<body>
+
         }
     </style>
 </head>
