--- a/myjobs.html
+++ b/myjobs.html
@@ -1454,8 +1454,9 @@
                                     </div>
                                 </div>
                                 <div class="job-card-footer">
-                                    <a href="https://pingu-blue.vercel.app/conductsurvey.html?jobNumber=${encodeURIComponent(jobNumber)}" 
+                                    <a href="https://pingu-blue.vercel.app/conductsurvey.html?job=${encodeURIComponent(jobNumber)}" 
                                        class="commence-survey-btn"
+                                       target="_blank"
                                        onclick="event.stopPropagation()">
                                         🔍 Commence Survey
                                     </a>
