--- a/myjobs.html
+++ b/myjobs.html
@@ -1498,7 +1498,9 @@
                 
                 <div class="detail-group">
                     <div class="detail-label">Phone Number</div>
-                    <div class="detail-value">${escapeHtml(job['Phone Number'] || 'N/A')}</div>
+                    <div class="detail-value clickable-value" onclick="copyToClipboard('${escapeHtml(job['Phone Number'] || 'N/A')}', this)" title="Click to copy">
+                        ${escapeHtml(job['Phone Number'] || 'N/A')}
+                    </div>
                 </div>
                 
                 <div class="detail-group">
