--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -103,6 +103,7 @@
             <div class="stat-card"><span class="label">Tesla</span><span id="stat-tesla" class="value" style="color:#f87171">0</span></div>
             <div class="stat-card"><span class="label">Fox</span><span id="stat-fox" class="value" style="color:#fbbf24">0</span></div>
             <div class="stat-card"><span class="label">Panel Only</span><span id="stat-panel" class="value" style="color:#a78bfa">0</span></div>
+            <div class="stat-card"><span class="label">Battery Only</span><span id="stat-battery" class="value" style="color:#a78bfa">0</span></div>
         </div>
         <div class="stats-row row-2">
             <div class="stat-card"><span class="label">KF Completed</span><span id="stat-kf" class="value" style="color:#34d399">0</span></div>
@@ -308,6 +309,7 @@
             else if (bookedStatus.includes('tesla')) brand = 'Tesla';
             else if (bookedStatus.includes('fox') || bookedStatus.includes('evo')) brand = 'Fox';
             else if (bookedStatus.includes('panel')) brand = 'Panel Only';
+            else if (bookedStatus.includes('battery')) brand = 'Battery Only';
 
             tr.innerHTML = `
                 <td style="font-weight:700;">${row['Job Number']}</td>
