--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -284,6 +284,7 @@
             return val.includes('fox') || val.includes('evo');
         }).length;
         document.getElementById('stat-panel').innerText = getCount('Booked Status', 'Panel');
+        document.getElementById('stat-battery').innerText = getCount('Booked Status', 'Battery');
         
         document.getElementById('stat-kf').innerText = getCount('Complete on KF', 'Y', true);
         document.getElementById('stat-cancelled').innerText = cancelled;
