--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -284,7 +284,10 @@
             return val.includes('fox') || val.includes('evo');
         }).length;
         document.getElementById('stat-panel').innerText = getCount('Booked Status', 'Panel');
-        document.getElementById('stat-battery').innerText = getCount('Booked Status', 'Battery');
+        document.getElementById('stat-battery').innerText = data.filter(j => {
+            const val = String(j['Booked Status'] || '').toLowerCase();
+            return val.includes('battery only');
+        }).length;
         
         document.getElementById('stat-kf').innerText = getCount('Complete on KF', 'Y', true);
         document.getElementById('stat-cancelled').innerText = cancelled;
