--- a/workscreeninput.html
+++ b/workscreeninput.html
@@ -459,7 +459,7 @@
             };
 
             try {
-                await addDoc(collection(db, 'jobs'), job);
+                await addDoc(collection(db, 'workscreeninput'), job);
                 showStatus('Job added successfully', 'success');
                 e.target.reset();
             } catch (err) {
