--- a/workscreen.html
+++ b/workscreen.html
@@ -6,7 +6,7 @@
   <title>Solar Workscreen – Overview</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
@@ -19,15 +19,12 @@
       --primary:   #f97316;
       --primary-d: #ea580c;
       --success:   #10b981;
+      --warning:   #f59e0b;
       --danger:    #ef4444;
       --border:    #334155;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; }
 
     body {
       font-family: 'Inter', system-ui, sans-serif;
@@ -38,162 +35,212 @@
     }
 
     .container {
-      max-width: 1280px;
+      max-width: 1320px;
       margin: 0 auto;
-      padding: 2rem 1.5rem;
+      padding: 2.5rem 1.5rem;
     }
 
     header {
-      margin-bottom: 2.5rem;
       text-align: center;
+      margin-bottom: 3rem;
     }
 
     h1 {
-      font-size: 2.25rem;
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-      background: linear-gradient(90deg, #f97316, #fb923c);
+      font-size: 2.8rem;
+      font-weight: 800;
+      background: linear-gradient(90deg, #f97316, #fb923c, #60a5fa);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      letter-spacing: -0.5px;
     }
 
     .subtitle {
       color: var(--text-dim);
-      font-size: 1.05rem;
+      font-size: 1.15rem;
+      margin-top: 0.5rem;
     }
 
     .grid-3 {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-      gap: 1.5rem;
-      margin-bottom: 2.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+      gap: 1.75rem;
+      margin-bottom: 3rem;
     }
 
     .card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
-      transition: border-color 0.2s;
+      border-radius: 14px;
+      padding: 1.75rem 2rem;
+      transition: all 0.2s ease;
     }
 
     .card:hover {
       border-color: var(--primary);
+      transform: translateY(-3px);
+      box-shadow: 0 12px 32px rgba(0,0,0,0.35);
     }
 
     .card-header {
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 1.25rem;
+      margin-bottom: 1.5rem;
     }
 
     .card-title {
-      font-size: 1.25rem;
-      font-weight: 600;
+      font-size: 1.4rem;
+      font-weight: 700;
     }
 
     .period-label {
-      font-size: 0.875rem;
+      font-size: 0.95rem;
       color: var(--text-dim);
+      font-weight: 500;
     }
 
-    .big-number {
-      font-size: 2.75rem;
-      font-weight: 700;
-      line-height: 1;
+    .mega-number {
+      font-size: 4.2rem;
+      font-weight: 800;
+      line-height: 0.95;
+      letter-spacing: -2px;
       color: var(--primary);
     }
 
-    .stats-row {
-      display: flex;
-      gap: 1.5rem;
-      margin-top: 1.25rem;
-      font-size: 0.95rem;
+    .mega-label {
+      font-size: 1.1rem;
+      color: var(--text-dim);
+      margin-top: 0.4rem;
+      font-weight: 500;
     }
 
-    .stat {
-      flex: 1;
-      text-align: center;
-      padding: 0.75rem;
+    .stats-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+      gap: 1.25rem;
+      margin: 1.75rem 0;
+    }
+
+    .stat-box {
       background: var(--surface-2);
-      border-radius: 8px;
+      border-radius: 10px;
+      padding: 1.1rem 0.9rem;
+      text-align: center;
     }
 
     .stat-label {
+      font-size: 0.875rem;
       color: var(--text-dim);
-      font-size: 0.85rem;
-      margin-bottom: 0.3rem;
+      margin-bottom: 0.4rem;
     }
 
     .stat-value {
-      font-size: 1.35rem;
-      font-weight: 600;
+      font-size: 2.1rem;
+      font-weight: 700;
     }
 
-    .stat.complete .stat-value { color: var(--success); }
-    .stat.danger   .stat-value { color: var(--danger); }
+    .stat-value.complete { color: var(--success); }
+    .stat-value.aborted   { color: var(--warning); }
+    .stat-value.cancelled { color: var(--danger); }
+
+    .jobtype-breakdown {
+      margin-top: 1.5rem;
+      padding-top: 1.25rem;
+      border-top: 1px solid var(--border);
+    }
+
+    .jobtype-title {
+      font-size: 1.05rem;
+      font-weight: 600;
+      margin-bottom: 0.9rem;
+      color: var(--text-dim);
+    }
+
+    .jobtype-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.6rem;
+    }
+
+    .jobtype-item {
+      display: flex;
+      justify-content: space-between;
+      font-size: 1rem;
+    }
+
+    .jobtype-name  { color: var(--text); }
+    .jobtype-count { font-weight: 600; color: var(--primary); }
 
     .daily-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.25rem;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 1.5rem;
     }
 
     .daily-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 1.25rem;
+      border-radius: 12px;
+      padding: 1.5rem;
     }
 
     .daily-header {
-      font-weight: 600;
-      margin-bottom: 1rem;
-      font-size: 1.1rem;
+      font-weight: 700;
+      font-size: 1.25rem;
+      margin-bottom: 1.1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
+
+    .daily-total {
+      font-size: 1.4rem;
+      color: var(--primary);
     }
 
     .daily-bars {
-      display: flex;
-      height: 1.5rem;
-      border-radius: 6px;
-      overflow: hidden;
-      margin-top: 0.75rem;
+      height: 1.6rem;
       background: var(--surface-2);
+      border-radius: 8px;
+      overflow: hidden;
+      display: flex;
+      margin: 1rem 0 0.8rem;
     }
 
-    .bar {
+    .bar-segment {
       height: 100%;
-      transition: width 0.4s ease;
+      transition: width 0.5s ease;
     }
 
-    .bar.complete { background: var(--success); }
-    .bar.pending  { background: #475569; }
-    .bar.danger   { background: var(--danger); }
+    .bar.complete  { background: var(--success); }
+    .bar.pending   { background: #475569; }
+    .bar.aborted   { background: var(--warning); }
+    .bar.cancelled { background: var(--danger); }
 
     .legend {
       display: flex;
-      gap: 1.25rem;
-      margin-top: 0.75rem;
-      font-size: 0.85rem;
+      flex-wrap: wrap;
+      gap: 1.25rem 1.75rem;
+      font-size: 0.9rem;
       color: var(--text-dim);
     }
 
     .legend-item {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.6rem;
     }
 
-    .dot {
-      width: 10px;
-      height: 10px;
+    .legend-dot {
+      width: 12px;
+      height: 12px;
       border-radius: 50%;
     }
 
-    @media (max-width: 900px) {
+    @media (max-width: 960px) {
       .grid-3 { grid-template-columns: 1fr; }
+      .mega-number { font-size: 3.6rem; }
     }
   </style>
 </head>
@@ -202,7 +249,7 @@
 <div class="container">
   <header>
     <h1>Workscreen Overview</h1>
-    <div class="subtitle">Solar Installs • Unique Postcodes • Real-time</div>
+    <div class="subtitle">Solar Installs • Real-time • Unique Jobs</div>
   </header>
 
   <div class="grid-3" id="weekly-cards"></div>
@@ -234,10 +281,15 @@
     renderAll();
   });
 
+  const JOB_TYPES = [
+    "Solar Install", "Battery", "Survey", "Revisit",
+    "Revisit Chargeable", "Aftercare"
+  ];
+
   function getWeekRange(offsetWeeks = 0) {
     const today = new Date();
     today.setHours(0,0,0,0);
-    const dayOfWeek = today.getDay() || 7; // Sunday → 7
+    const dayOfWeek = today.getDay() || 7;
     const monday = new Date(today);
     monday.setDate(today.getDate() - dayOfWeek + 1 + offsetWeeks * 7);
 
@@ -254,58 +306,89 @@
     const { days } = getWeekRange(offset);
     const weekEntries = entries.filter(e => days.includes(e.Date));
 
-    // Unique postcodes
-    const uniquePostcodes = new Set(weekEntries.map(e => e.Postcode)).size;
+    // Unique jobs ≈ distinct (Postcode + Job Type + Team)
+    const jobKeys = new Set(
+      weekEntries.map(e => `${e.Postcode}|${e['Job Type']}|${e.Team}`)
+    );
+    const uniqueJobs = jobKeys.size;
+
+    const totalJobs     = weekEntries.length;
+    const completed     = weekEntries.filter(e => e.Status === 'complete').length;
+    const aborted       = weekEntries.filter(e => e.Status === 'aborted').length;
+    const cancelled     = weekEntries.filter(e => e.Status === 'cancelled').length;
+
+    // Job type breakdown
+    const byType = {};
+    JOB_TYPES.forEach(type => byType[type] = 0);
+    weekEntries.forEach(e => {
+      const t = e['Job Type'];
+      if (t && byType.hasOwnProperty(t)) byType[t]++;
+    });
 
     // Daily stats
     const daily = days.map(date => {
       const dayJobs = weekEntries.filter(e => e.Date === date);
       const total     = dayJobs.length;
-      const completed = dayJobs.filter(e => e.Status === 'complete').length;
-      const aborted   = dayJobs.filter(e => e.Status === 'aborted' || e.Status === 'cancelled').length;
-      const pending   = total - completed - aborted;
+      const comp      = dayJobs.filter(e => e.Status === 'complete').length;
+      const abo       = dayJobs.filter(e => e.Status === 'aborted').length;
+      const can       = dayJobs.filter(e => e.Status === 'cancelled').length;
+      const pending   = total - comp - abo - can;
 
-      return { date, total, completed, aborted, pending };
+      return { date, total, completed: comp, aborted: abo, cancelled: can, pending };
     });
 
-    const totalJobs = weekEntries.length;
-    const totalCompleted = weekEntries.filter(e => e.Status === 'complete').length;
-    const totalAborted   = weekEntries.filter(e => e.Status === 'aborted' || e.Status === 'cancelled').length;
-
-    return { uniquePostcodes, totalJobs, totalCompleted, totalAborted, daily };
+    return { uniqueJobs, totalJobs, completed, aborted, cancelled, byType, daily };
   }
 
   function renderAll() {
     const periods = [
-      { title: "Previous Week", offset: -1, color: "#64748b" },
-      { title: "Current Week",  offset:  0, color: "var(--primary)" },
-      { title: "Next Week",     offset: +1, color: "#60a5fa" }
+      { title: "Previous Week", offset: -1 },
+      { title: "Current Week",  offset:  0 },
+      { title: "Next Week",     offset: +1 }
     ];
 
     const cardsHtml = periods.map(p => {
-      const stats = getWeekStats(p.offset);
+      const s = getWeekStats(p.offset);
+
+      const typeRows = JOB_TYPES.map(t => `
+        <div class="jobtype-item">
+          <span class="jobtype-name">${t}</span>
+          <span class="jobtype-count">${s.byType[t] || 0}</span>
+        </div>
+      `).join('');
+
       return `
         <div class="card">
           <div class="card-header">
             <div class="card-title">${p.title}</div>
             <div class="period-label">${formatWeek(p.offset)}</div>
           </div>
-          <div class="big-number">${stats.uniquePostcodes}</div>
-          <div style="font-size:0.95rem; color:var(--text-dim); margin-top:0.25rem;">unique postcodes</div>
 
-          <div class="stats-row">
-            <div class="stat">
-              <div class="stat-label">Total Jobs</div>
-              <div class="stat-value">${stats.totalJobs}</div>
+          <div class="mega-number">${s.uniqueJobs}</div>
+          <div class="mega-label">unique jobs</div>
+
+          <div class="stats-grid">
+            <div class="stat-box">
+              <div class="stat-label">Total</div>
+              <div class="stat-value">${s.totalJobs}</div>
             </div>
-            <div class="stat complete">
+            <div class="stat-box">
               <div class="stat-label">Completed</div>
-              <div class="stat-value">${stats.totalCompleted}</div>
+              <div class="stat-value complete">${s.completed}</div>
             </div>
-            <div class="stat danger">
-              <div class="stat-label">Aborted / Cancelled</div>
-              <div class="stat-value">${stats.totalAborted}</div>
+            <div class="stat-box">
+              <div class="stat-label">Aborted</div>
+              <div class="stat-value aborted">${s.aborted}</div>
             </div>
+            <div class="stat-box">
+              <div class="stat-label">Cancelled</div>
+              <div class="stat-value cancelled">${s.cancelled}</div>
+            </div>
+          </div>
+
+          <div class="jobtype-breakdown">
+            <div class="jobtype-title">Breakdown by Job Type</div>
+            <div class="jobtype-list">${typeRows}</div>
           </div>
         </div>
       `;
@@ -313,51 +396,53 @@
 
     document.getElementById('weekly-cards').innerHTML = cardsHtml.join('');
 
-    // Daily breakdown - only current week
+    // Daily breakdown - current week only
     const current = getWeekStats(0);
     const dailyHtml = current.daily.map(d => {
-      const total = d.total;
-      if (total === 0) return '';
+      if (d.total === 0) return '';
 
-      const cPct = total ? (d.completed / total * 100) : 0;
-      const pPct = total ? (d.pending   / total * 100) : 0;
-      const aPct = total ? (d.aborted   / total * 100) : 0;
+      const cPct = d.total ? (d.completed / d.total * 100) : 0;
+      const pPct = d.total ? (d.pending   / d.total * 100) : 0;
+      const aPct = d.total ? (d.aborted   / d.total * 100) : 0;
+      const nPct = d.total ? (d.cancelled / d.total * 100) : 0;
 
       return `
         <div class="daily-card">
           <div class="daily-header">
             ${new Date(d.date).toLocaleDateString('en-GB', { weekday:'long', day:'numeric', month:'short' })}
-            <span style="float:right; color:var(--text-dim); font-weight:500;">${total} jobs</span>
+            <span class="daily-total">${d.total} jobs</span>
           </div>
 
           <div class="daily-bars">
-            <div class="bar complete" style="width:${cPct}%"></div>
-            <div class="bar pending"  style="width:${pPct}%"></div>
-            <div class="bar danger"   style="width:${aPct}%"></div>
+            <div class="bar-segment complete"  style="width:${cPct}%"></div>
+            <div class="bar-segment pending"   style="width:${pPct}%"></div>
+            <div class="bar-segment aborted"   style="width:${aPct}%"></div>
+            <div class="bar-segment cancelled" style="width:${nPct}%"></div>
           </div>
 
           <div class="legend">
-            <div class="legend-item"><div class="dot" style="background:var(--success)"></div> Complete (${d.completed})</div>
-            <div class="legend-item"><div class="dot" style="background:#475569"></div> Pending (${d.pending})</div>
-            <div class="legend-item"><div class="dot" style="background:var(--danger)"></div> Aborted (${d.aborted})</div>
+            <div class="legend-item"><div class="legend-dot" style="background:var(--success)"></div>Complete (${d.completed})</div>
+            <div class="legend-item"><div class="legend-dot" style="background:#475569"></div>Pending (${d.pending})</div>
+            <div class="legend-item"><div class="legend-dot" style="background:var(--warning)"></div>Aborted (${d.aborted})</div>
+            <div class="legend-item"><div class="legend-dot" style="background:var(--danger)"></div>Cancelled (${d.cancelled})</div>
           </div>
         </div>
       `;
     }).filter(Boolean);
 
     document.getElementById('daily-breakdown').innerHTML =
-      dailyHtml.length ? dailyHtml.join('') : '<p style="text-align:center;color:var(--text-dim);">No jobs this week</p>';
+      dailyHtml.length ? dailyHtml.join('') : '<p style="text-align:center; color:var(--text-dim); padding:3rem 0;">No jobs scheduled this week</p>';
   }
 
   function formatWeek(offset) {
     const { monday } = getWeekRange(offset);
     const end = new Date(monday);
     end.setDate(monday.getDate() + 6);
-    return monday.toLocaleDateString('en-GB', {day:'numeric',month:'short'}) + ' – ' +
+    return monday.toLocaleDateString('en-GB', {day:'numeric',month:'short'}) +
+           ' – ' +
            end.toLocaleDateString('en-GB', {day:'numeric',month:'short',year:'numeric'});
   }
 
-  // Initial render
   renderAll();
 </script>
 </body>
