--- a/workscreeninput.html
+++ b/workscreeninput.html
@@ -290,6 +290,7 @@
         <div class="modal-content">
             <h3>Update This Day</h3>
             <div class="status-buttons">
+                <button class="btn btn-primary" data-status="in-progress">Job in Progress</button>
                 <button class="btn btn-primary" data-status="complete">Mark as Complete</button>
                 <button class="btn btn-primary" data-status="aborted">Mark as Aborted</button>
                 <button class="btn btn-primary" data-status="cancelled">Mark as Cancelled</button>
